<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fr.simplex-software.tfp</groupId>
  <artifactId>transport-for-paris</artifactId>
  <version>1.0-SNAPSHOT</version>
  <modules>
    <module>fuse</module>
  </modules>
  <packaging>pom</packaging>
  <name>Transport for Paris :: Parent POM</name>
  <properties>
    <java.version>11</java.version>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <version.wildfly>7.4.0.GA</version.wildfly>
    <version.fuse>7.9.0.fuse-sb2-790065-redhat-00001</version.fuse>
    <version-maven-surefire-plugin>3.0.0-M5</version-maven-surefire-plugin>
    <version-maven-failsafe-plugin>3.0.0-M5</version-maven-failsafe-plugin>
    <version-maven-war-plugin>3.3.2</version-maven-war-plugin>
    <version-wildfly-maven-plugin>2.0.2.Final</version-wildfly-maven-plugin>
    <jboss.server.name>jboss-eap-7.4</jboss.server.name>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.20</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.32</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.7.32</version>
    </dependency>
  </dependencies>
</project>